# forensiq

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/config/: settings.py
backend/forensiq/: main.py
backend/forensiq/api/: routes.py
backend/forensiq/auth/: conversations.py  deps.py  mongo.py
backend/forensiq/cache/: redis_cache.py
backend/forensiq/gdrive/: __init__.py
backend/forensiq/graphrag/: extractor.py
backend/forensiq/pageindex/: indexer.py
backend/tests/: test_extractor.py  test_indexer.py
backend/tools/: demo.py
config/: settings.py
forensiq/: __init__.py  main.py
forensiq/auth/: mongo.py
forensiq/cache/: __init__.py
forensiq/graphrag/: neo4j_client.py  schema.py
forensiq/llm/: __init__.py  client.py
forensiq/orchestrator/: pipeline.py
forensiq/pageindex/: page.py  store.py
forensiq/riskintel/: detector.py
forensiq/ufdr/: models.py  parser.py
forensiq/vectorrag/: embedder.py  faiss_store.py  retriever.py
frontend/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/contexts/: AuthContext.jsx  CaseContext.jsx  ChatContext.jsx
frontend/src/hooks/: use-theme.js
frontend/src/lib/: api.js
frontend/src/pages/: HomePage.jsx  (+8 more)
tools/: generate_demo_dataset.py  generate_expanded_dataset.py
(+6 files in other folders)
